--- a/src/pages/noticias/noticias.html
+++ b/src/pages/noticias/noticias.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar center>
-        <img class="logoHeaderv2" width="120" src="assets/images/logoHeaderV2@2.png" />
+        <img class="logoHeaderv2" width="130" src="assets/images/logoHeaderV2@2.png" />
         <button ion-button menuToggle right>
             <div class="navicon-button x">
                 <div class="navicon"></div>
@@ -9,31 +9,60 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding class="contentInterior">
-    <ion-row justify-content-around>
-        <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
-            <h1 class="text-center uppercase">Noticias</h1>
-        </ion-col>
-    </ion-row>
-    <ion-list no-lines class="noticias">
-        <button ion-item *ngFor="let noticia of noticias" class="no-padding" (click)="openPage('NoticiaDetallePage', noticia);" detail-push>
-            <div class="imageNoticia" *ngIf="noticia.doc._attachments">
-                <div *ngFor="let attachment of noticia.doc._attachments | keys; index as i">
-                    <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}/noticias/{{noticia.doc._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
+    <ion-grid class="no-padding">
+        <ion-row justify-content-around>
+            <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
+                <h1 class="text-center uppercase">Noticias</h1>
+            </ion-col>
+        </ion-row>
+        <ion-row justify-content-around>
+            <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
+                <form class="buscadorNoticias" (ngSubmit)="searchSubmit()">
+                    <ion-row>
+                        <ion-col col-10>
+                            <ion-searchbar class="buscador" animated="true" cancelButtonText="Cancelar" showCancelButton="false" placeholder="Buscar Noticias"
+                                type="text" [(ngModel)]="term" (search)="searchSubmit($event)" [ngModelOptions]="{standalone: true}"></ion-searchbar>
+                        </ion-col>
+                        <ion-col col-2>
+                            <button class="searchButton button" type="submit">
+                                <ion-icon color="dark" name="search"></ion-icon>
+                            </button>
+                        </ion-col>
+                    </ion-row>
+                </form>
+            </ion-col>
+        </ion-row>
+        <ion-row justify-content-around *ngIf="resultados">
+            <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
+                <ion-list no-lines class="noticias">
+                    <button ion-item *ngFor="let noticia of noticias" class="no-padding" (click)="openPage('NoticiaDetallePage', noticia);" detail-push>
+                        <div class="imageNoticia" *ngIf="noticia._embedded['wp:featuredmedia']['0'].media_details">
+                            <lazy-img width="100%" inputSrc="{{noticia._embedded['wp:featuredmedia']['0'].media_details.sizes.thumbNoticia.source_url}}"></lazy-img>
+                        </div>
+                        <div class="detalles">
+                            <h2 text-wrap [innerHTML]="noticia.title.rendered"></h2>
+                            <div class="dates">
+                                <span class="since">{{noticia.modified | amLocale:'es' | amTimeAgo}}</span>
+                                <span class="date">{{noticia.modified | date : "dd ' ' MMMM ' ' yyyy"}}</span>
+                            </div>
+                            <div class="bajada" text-wrap>
+                                <p [innerHTML]="noticia.excerpt.rendered"></p>
+                                <a class="more" href="#">Leer más</a>
+                            </div>
+                        </div>
+                    </button>
+                </ion-list>
+            </ion-col>
+        </ion-row>
+        <ion-row justify-content-around *ngIf="!resultados">
+            <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
+                <div class="sinResultados">
+                    No se han encontrado noticias relacionadas...
                 </div>
-            </div>
-            <div class="detalles">
-                <h2 text-wrap>{{noticia.doc.title}}</h2>
-                <div class="dates">
-                    <span class="since">{{noticia.doc.updated_at | amLocale:'es' | amTimeAgo}}</span><span class="date">{{noticia.doc.updated_at | date : "dd ' ' MMMM ' ' yyyy"}}</span>
-                </div>
-                <div class="bajada" text-wrap>
-                    <p>{{noticia.doc.body | words : 15 }}</p>
-                    <a class="more" href="#">Leer más</a>
-                </div>
-            </div>
-        </button>
-    </ion-list>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+        <ion-infinite-scroll-content loadingText="Cargando más noticias..."></ion-infinite-scroll-content>
     </ion-infinite-scroll>
 </ion-content>
