--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -26,7 +26,7 @@
     <ion-grid>
 		<ion-row>
 			<ion-col padding margin-top col-12>
-                <h1 class="welcome">Ingresa a la app MTS</h1>
+                <h1 class="welcome">Si eres Socio ingresa aquí</h1>
                 <div class="text-center">
                     <button margin-top center ion-button round large (click)="goToHome()">Ingresar</button>
                 </div>
