--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar center>
-        <img class="logoHeaderv2" width="120" src="assets/images/logoHeaderV2@2.png" />
+        <img class="logoHeaderv2" width="130" src="assets/images/logoHeaderV2@2.png" />
         <button ion-button menuToggle right>
             <div class="navicon-button x">
                 <div class="navicon"></div>
@@ -15,67 +15,86 @@
                 <h1 class="text-center uppercase">Agenda</h1>
             </ion-col>
         </ion-row>
-        <ion-row class="botonesUsers" justify-content-around>
+        <ion-row padding-right padding-left justify-content-around>
             <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
-                <button class="sociosButton inContent minPadding fullWidth active" ion-button round large (click)="changeUser('socios');">Socios</button>
-            </ion-col>
-            <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
-                <button class="proveedoresButton inContent minPadding fullWidth inactive" ion-button round large (click)="changeUser('proveedores');">Proveedores</button>
+                <form (ngSubmit)="searchSubmit()">
+                    <ion-searchbar class="buscador" animated="true" cancelButtonText="Cancelar" showCancelButton="false" placeholder="Buscar Socios y Proveedores"
+                        type="text" (ionInput)="searchFn($event)" (search)="searchSubmit($event)"></ion-searchbar>
+                    <button class="button button-clear" type="submit">Buscar</button>
+                </form>
             </ion-col>
         </ion-row>
+        <div class="bloqueBlancoNoPadding no-padding">
+            <ion-row class="botonesUsers" padding-right padding-left justify-content-around>
+                <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-6 align-self-center class="no-padding">
+                    <ion-row>
+                        <ion-col>
+                            <button class="sociosButton inContent minPadding fullWidth active" ion-button round large (click)="changeUser('socios');">Socios</button>
+                        </ion-col>
+                        <ion-col>
+                            <button class="proveedoresButton inContent minPadding fullWidth inactive" ion-button round large (click)="changeUser('proveedores');">Proveedores</button>
+                        </ion-col>
+                    </ion-row>
+                </ion-col>
+            </ion-row>
+        </div>
         <ion-row justify-content-around>
             <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3 align-self-center>
                 <div class="bloqueBlancoNoPadding no-padding">
                     <ion-list no-lines>
-                        <ion-item-group class="sociosContainer" *ngFor="let socios of sociosAgrupados">
-                            <ion-item-divider color="ultralight">{{socios.letter}}</ion-item-divider>
-                            <ion-item-sliding *ngFor="let socio of socios.users">
-                                <ion-item no-lines (click)="openPage('ProfileDetallePage', socio);" *ngIf="socio.isActive">
-                                    <ion-avatar item-start *ngIf="socio._attachments">
-                                        <div class="profilePhoto" *ngFor="let attachment of socio._attachments | keys; index as i">
-                                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.user.usersSocios}}/{{socio._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
-                                        </div>
-                                    </ion-avatar>
-                                    <h2>{{socio.name}}</h2>
-                                    <h3>{{socio.name_ferreteria}}</h3>
-                                </ion-item>
-                                <ion-item-options no-lines *ngIf="socio.isActive">
-                                    <button class="normalButton" ion-button icon-only (click)="saveContact(socio)" color="save">
-                                        <ion-icon name="md-download"></ion-icon>
-                                    </button>
-                                    <button class="normalButton" ion-button icon-only (click)="callToContact(socio)" color="call">
-                                        <ion-icon name="call"></ion-icon>
-                                    </button>
-                                    <button class="normalButton" ion-button icon-only (click)="mailToContact(socio)" color="mail">
-                                        <ion-icon name="mail"></ion-icon>
-                                    </button>
-                                </ion-item-options>
-                            </ion-item-sliding>
+                        <ion-item-group class="sociosContainer">
+                            <div class="socioContainer" *ngFor="let socios of sociosAgrupados">
+                                <ion-item-divider color="ultralight">{{socios.letter}}</ion-item-divider>
+                                <ion-item-sliding *ngFor="let socio of socios.users">
+                                    <ion-item no-lines (click)="openPage('ProfileDetallePage', socio);" *ngIf="socio.isActive">
+                                        <ion-avatar item-start *ngIf="socio._attachments">
+                                            <div class="profilePhoto" *ngFor="let attachment of socio._attachments | keys; index as i">
+                                                <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.user.usersSocios}}/{{socio._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
+                                            </div>
+                                        </ion-avatar>
+                                        <h2>{{socio.name}}</h2>
+                                        <h3>{{socio.name_ferreteria}}</h3>
+                                    </ion-item>
+                                    <ion-item-options no-lines *ngIf="socio.isActive">
+                                        <button class="normalButton" ion-button icon-only (click)="saveContact(socio)" color="save">
+                                            <ion-icon name="md-download"></ion-icon>
+                                        </button>
+                                        <button class="normalButton" ion-button icon-only (click)="callToContact(socio)" color="call">
+                                            <ion-icon name="call"></ion-icon>
+                                        </button>
+                                        <button class="normalButton" ion-button icon-only (click)="mailToContact(socio)" color="mail">
+                                            <ion-icon name="mail"></ion-icon>
+                                        </button>
+                                    </ion-item-options>
+                                </ion-item-sliding>
+                            </div>
                         </ion-item-group>
-                        <ion-item-group class="proveedoresContainer" *ngFor="let proveedores of proveedoresAgrupados">
-                            <ion-item-divider color="ultralight">{{proveedores.letter}}</ion-item-divider>
-                            <ion-item-sliding *ngFor="let proveedor of proveedores.users">
-                                <ion-item no-lines (click)="openPage('ProfileDetallePage', proveedor);" *ngIf="proveedor.isActive">
-                                    <ion-avatar item-start *ngIf="proveedor._attachments">
-                                        <div class="profilePhoto" *ngFor="let attachment of proveedor._attachments | keys; index as i">
-                                            <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.user.usersProveedores}}/{{proveedor._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
-                                        </div>
-                                    </ion-avatar>
-                                    <h2>{{proveedor.name}}</h2>
-                                    <h3>{{proveedor.name_ferreteria}}</h3>
-                                </ion-item>
-                                <ion-item-options no-lines *ngIf="proveedor.isActive">
-                                    <button class="normalButton" ion-button icon-only (click)="saveContact(proveedor)" color="save">
-                                        <ion-icon name="md-download"></ion-icon>
-                                    </button>
-                                    <button class="normalButton" ion-button icon-only (click)="callToContact(proveedor)" color="call">
-                                        <ion-icon name="call"></ion-icon>
-                                    </button>
-                                    <button class="normalButton" ion-button icon-only (click)="mailToContact(proveedor)" color="mail">
-                                        <ion-icon name="mail"></ion-icon>
-                                    </button>
-                                </ion-item-options>
-                            </ion-item-sliding>
+                        <ion-item-group class="proveedoresContainer">
+                            <div class="proveedorContainer" *ngFor="let proveedores of proveedoresAgrupados">
+                                <ion-item-divider color="ultralight">{{proveedores.letter}}</ion-item-divider>
+                                <ion-item-sliding *ngFor="let proveedor of proveedores.users">
+                                    <ion-item no-lines (click)="openPage('ProfileDetallePage', proveedor);" *ngIf="proveedor.isActive">
+                                        <ion-avatar item-start *ngIf="proveedor._attachments">
+                                            <div class="profilePhoto" *ngFor="let attachment of proveedor._attachments | keys; index as i">
+                                                <lazy-img width="100%" inputSrc="{{cfg.apiUrl}}{{cfg.user.usersProveedores}}/{{proveedor._id}}/{{attachment.key}}" *ngIf="i==0"></lazy-img>
+                                            </div>
+                                        </ion-avatar>
+                                        <h2>{{proveedor.name}}</h2>
+                                        <h3>{{proveedor.name_ferreteria}}</h3>
+                                    </ion-item>
+                                    <ion-item-options no-lines *ngIf="proveedor.isActive">
+                                        <button class="normalButton" ion-button icon-only (click)="saveContact(proveedor)" color="save">
+                                            <ion-icon name="md-download"></ion-icon>
+                                        </button>
+                                        <button class="normalButton" ion-button icon-only (click)="callToContact(proveedor)" color="call">
+                                            <ion-icon name="call"></ion-icon>
+                                        </button>
+                                        <button class="normalButton" ion-button icon-only (click)="mailToContact(proveedor)" color="mail">
+                                            <ion-icon name="mail"></ion-icon>
+                                        </button>
+                                    </ion-item-options>
+                                </ion-item-sliding>
+                            </div>
                         </ion-item-group>
                     </ion-list>
                 </div>
