--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -16,11 +16,11 @@
                 <form [formGroup]="loginData" (ngSubmit)="login()">
                     <ion-item>
                         <ion-label floating>Mail de usuario</ion-label>
-                        <ion-input type="email" formControlName="email" autocomplete="false" spellcheck="false"></ion-input>
+                        <ion-input type="email" formControlName="user" autocomplete="false" spellcheck="false"></ion-input>
                     </ion-item>
                     <ion-item>
                         <ion-label floating>Clave</ion-label>
-                        <ion-input type="password" formControlName="password" autocomplete="false" spellcheck="false"></ion-input>
+                        <ion-input type="password" formControlName="pass" autocomplete="false" spellcheck="false"></ion-input>
                     </ion-item>
                     <div margin-top class="text-center">
                         <button margin-top center ion-button round large type="submit" [disabled]="!loginData.valid">Ingresar</button>
